--- a/dockerfile-ubuntu
+++ b/dockerfile-ubuntu
@@ -1,5 +1,7 @@
 FROM ubuntu:20.04
-RUN apt-get update && apt-get install -y \
+RUN apt-get update
+RUN DEBIAN_FRONTEND="noninteractive" apt-get -y install tzdata
+RUN apt-get install -y \
     mariadb-server \
     phpmyadmin \
     php-mbstring \
